[project]
name = "liveportrait"
version = "0.1.0"
description = "Package for Live Portrait animation"
license-files = ["LICENSE"]
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "opencv-python>=4.11.0.86",
    "pillow>=10.2.0,<10.3.0",
    "pyyaml>=6.0.1",
    "scipy>=1.14.1",
    "scikit-image>=0.24.0",
    "imageio>=2.36.0",
    "tqdm>=4.66.4",
    "onnx>=1.16.1",
    "onnxruntime-gpu>=1.20.1",
    "albumentations>=1.4.10",
    "pykalman>=0.9.7",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["liveportrait*"]

[tool.setuptools.package-data]
"liveportrait.config" = ["*.yaml", "*.yml"]
"liveportrait.utils.resources" = ["*.pkl", "*.png"]
"liveportrait.utils.dependencies.insightface.data.objects" = ["*.pkl"]
"liveportrait.utils.dependencies.insightface.data.images" = ["*.jpg", "*.png"]
